added answer method with params instance variale

--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,2 +1,8 @@
-<h1>Questions#answer</h1>
-<p>Find me in app/views/questions/answer.html.erb</p>
+<h1>Controller Answer</h1>
+<p><%= @coach_response %></p>
+
+<%= link_to "Ask a new question", ask_path %>
+
+
+
+
