--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,2 +1,7 @@
-<h1>Questions#ask</h1>
-<p>Find me in app/views/questions/ask.html.erb</p>
+<h1>Speak to your Coach</h1>
+
+<form action="/answer" method='get'>
+  <label for="question">Speak to your coach</label>
+  <input type="text" id="question" name="query" placeholder="what time is it?">
+  <input type="submit" value="Go on!">
+</form>
